--- a/cxglobal.html
+++ b/cxglobal.html
@@ -57,7 +57,7 @@ body {
   line-height: 20px;
   color: #444;
   letter-spacing: 0.15px;
-  background-color: rgba(252, 248, 244, 0.45); }
+  background-color: #FDFBFA; }
 
 /* Skeleton grid */
 .container {
@@ -1312,6 +1312,8 @@ function main() {
     title="reverseString(text: string): string"><wbr />reverse<wbr />String<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#createSeqBool,int"
     title="createSeqBool(n: int = 10): seq[bool]"><wbr />create<wbr />Seq<wbr />Bool<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#createSeqBinary,int"
+    title="createSeqBinary(n: int = 10): seq[int]"><wbr />create<wbr />Seq<wbr />Binary<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#createSeqInt,int,int,int"
     title="createSeqInt(n: int = 10; mi: int = 0; ma: int = 1000): seq[int]"><wbr />create<wbr />Seq<wbr />Int<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#ff,float,int"
@@ -1657,6 +1659,13 @@ rndSample returns one rand sample from a sequence
 </dd>
 <dt id="createSeqBool"><a name="createSeqBool,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">createSeqBool</span><span class="Other">(</span><span class="Identifier">n</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">10</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">bool</span><span class="Other">]</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
 <dd>
+
+
+</dd>
+<dt id="createSeqBinary"><a name="createSeqBinary,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">createSeqBinary</span><span class="Other">(</span><span class="Identifier">n</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">10</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">int</span><span class="Other">]</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
+<dd>
+<p>createSeqBinary</p>
+<p>returns a seq of integers between 0 and 1</p>
 
 
 </dd>
@@ -2232,7 +2241,7 @@ returns a colorpalette which can be used to iterate over</pre>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-03-17 18:26:37 UTC</small>
+        <small>Made with Nim. Generated: 2018-04-01 14:40:09 UTC</small>
       </div>
     </div>
   </div>
