--- a/cxprint.html
+++ b/cxprint.html
@@ -57,7 +57,7 @@ body {
   line-height: 20px;
   color: #444;
   letter-spacing: 0.15px;
-  background-color: rgba(252, 248, 244, 0.45); }
+  background-color: #FDFBFA; }
 
 /* Skeleton grid */
 .container {
@@ -1416,7 +1416,7 @@ Status      : stable
 
 License     : MIT opensource
 
-Latest      : 2018-03-16
+Latest      : 2018-03-31
 
 Compiler    : Nim &gt;= 0.18.x dev branch
 
@@ -1931,7 +1931,7 @@ forward declaration
 <pre class="listing"><span class="Keyword">import</span> <span class="Identifier">nimcx</span>
 <span class="Identifier">printLnBiCol</span><span class="Punctuation">(</span><span class="StringLit">&quot;Test for  :  doty</span><span class="EscapeSequence">\n</span><span class="StringLit">&quot;</span><span class="Punctuation">,</span><span class="Identifier">truetomato</span><span class="Punctuation">,</span><span class="Identifier">lime</span><span class="Punctuation">,</span><span class="StringLit">&quot;:&quot;</span><span class="Punctuation">,</span><span class="DecNumber">0</span><span class="Punctuation">,</span><span class="Identifier">false</span><span class="Punctuation">,</span><span class="Punctuation">{</span><span class="Punctuation">}</span><span class="Punctuation">)</span>
 <span class="Identifier">dotyLn</span><span class="Punctuation">(</span><span class="DecNumber">22</span> <span class="Punctuation">,</span><span class="Identifier">lime</span><span class="Punctuation">)</span>
-<span class="Identifier">dotyLn</span><span class="Punctuation">(</span><span class="DecNumber">18</span> <span class="Punctuation">,</span><span class="Identifier">salmon</span><span class="Punctuation">,</span><span class="Identifier">blue</span><span class="Punctuation">)</span>
+<span class="Identifier">dotyLn</span><span class="Punctuation">(</span><span class="DecNumber">18</span> <span class="Punctuation">,</span><span class="Identifier">salmon</span><span class="Punctuation">,</span><span class="Identifier">bgBlue</span><span class="Punctuation">)</span>
 <span class="Identifier">dotyLn</span><span class="Punctuation">(</span><span class="Identifier">centerX</span><span class="Punctuation">(</span><span class="Punctuation">)</span><span class="Punctuation">,</span><span class="Identifier">red</span><span class="Punctuation">)</span>  <span class="Comment"># full widedotted line</span></pre><p>color clrainbow is not supported and will be in white </p>
 
 
@@ -2175,7 +2175,7 @@ forward declaration
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-03-17 18:26:45 UTC</small>
+        <small>Made with Nim. Generated: 2018-04-01 14:40:17 UTC</small>
       </div>
     </div>
   </div>
