--- a/cxfont.html
+++ b/cxfont.html
@@ -57,7 +57,7 @@ body {
   line-height: 20px;
   color: #444;
   letter-spacing: 0.15px;
-  background-color: rgba(252, 248, 244, 0.45); }
+  background-color: #FDFBFA; }
 
 /* Skeleton grid */
 .container {
@@ -1670,7 +1670,7 @@ printNimcx<blockquote><p>experiments in block font building , default is center 
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-03-17 18:26:41 UTC</small>
+        <small>Made with Nim. Generated: 2018-04-01 14:40:14 UTC</small>
       </div>
     </div>
   </div>
