--- a/cxnetwork.html
+++ b/cxnetwork.html
@@ -57,7 +57,7 @@ body {
   line-height: 20px;
   color: #444;
   letter-spacing: 0.15px;
-  background-color: rgba(252, 248, 244, 0.45); }
+  background-color: #FDFBFA; }
 
 /* Skeleton grid */
 .container {
@@ -1385,7 +1385,7 @@ function main() {
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-03-17 18:26:40 UTC</small>
+        <small>Made with Nim. Generated: 2018-04-01 14:40:12 UTC</small>
       </div>
     </div>
   </div>
