--- a/cxprint.html
+++ b/cxprint.html
@@ -1416,7 +1416,7 @@ Status      : stable
 
 License     : MIT opensource
 
-Latest      : 2018-03-31
+Latest      : 2018-04-05
 
 Compiler    : Nim &gt;= 0.18.x dev branch
 
@@ -1916,7 +1916,7 @@ forward declaration
     <span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">RootEffect</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
 <dd>
 <p>printCxLine</p>
-<p>prints a horizontal for frames or other use with or without text , with or without brackets around the text as specified in an Cxline object the underlaying CxLine object is still further developed. see cxlineobjectE1.nim for an example </p>
+<p>prints a horizontal for frames or other use with or without text , with or without brackets around the text as specified in an Cxline object the underlaying CxLine object is still further developed. cxline object is defined in cxglobal.nim see cxlineobjectE1.nim for an example </p>
 
 
 </dd>
@@ -2175,7 +2175,7 @@ forward declaration
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-04-01 14:40:17 UTC</small>
+        <small>Made with Nim. Generated: 2018-04-05 15:16:42 UTC</small>
       </div>
     </div>
   </div>
