--- a/cxglobal.html
+++ b/cxglobal.html
@@ -1288,18 +1288,10 @@ function main() {
     title="newLine(n: int = 1): string"><wbr />new<wbr />Line<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#cxtoLower,char"
     title="cxtoLower(c: char): char"><wbr />cxto<wbr />Lower<span class="attachedType" style="visibility:hidden"></span></a></li>
-  <li><a class="reference" href="#getTerminalWidth,"
-    title="getTerminalWidth(): int"><wbr />get<wbr />Terminal<wbr />Width<span class="attachedType" style="visibility:hidden"></span></a></li>
-  <li><a class="reference" href="#getTerminalHeight,"
-    title="getTerminalHeight(): int"><wbr />get<wbr />Terminal<wbr />Height<span class="attachedType" style="visibility:hidden"></span></a></li>
-  <li><a class="reference" href="#cxpad,string,int"
-    title="cxpad(s: string; padlen: int): string"><wbr />cxpad<span class="attachedType" style="visibility:hidden"></span></a></li>
-  <li><a class="reference" href="#cxlpad,string,int"
-    title="cxlpad(s: string; padlen: int): string"><wbr />cxlpad<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#isNumeric,string"
+    title="isNumeric(s: string): bool"><wbr />is<wbr />Numeric<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#waitOn,int"
     title="waitOn(alen: int = 1)"><wbr />wait<wbr />On<span class="attachedType" style="visibility:hidden"></span></a></li>
-  <li><a class="reference" href="#rndSample,seq[T]"
-    title="rndSample[T](asq: seq[T]): T"><wbr />rnd<wbr />Sample<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#rndRGB,"
     title="rndRGB(): auto"><wbr />rnd<wbr />RGB<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#sum,seq[T]"
@@ -1389,6 +1381,22 @@ function main() {
     title="sampleSeq[T](x: seq[T]; a: int; b: int): seq[T]"><wbr />sample<wbr />Seq<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#tupleToStr,"
     title="tupleToStr(xs: tuple): string"><wbr />tuple<wbr />To<wbr />Str<span class="attachedType" style="visibility:hidden"></span></a></li>
+
+  </ul>
+</li>
+<li>
+  <a class="reference reference-toplevel" href="#13" id="63">Funcs</a>
+  <ul class="simple simple-toc-section">
+      <li><a class="reference" href="#getTerminalWidth,"
+    title="getTerminalWidth(): int"><wbr />get<wbr />Terminal<wbr />Width<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#getTerminalHeight,"
+    title="getTerminalHeight(): int"><wbr />get<wbr />Terminal<wbr />Height<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#cxpad,string,int,string"
+    title="cxpad(s: string; padlen: int; paddy: string = spaces(1)): string"><wbr />cxpad<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#cxlpad,string,int,string"
+    title="cxlpad(s: string; padlen: int; paddy: string = spaces(1)): string"><wbr />cxlpad<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#rndSample,seq[T]"
+    title="rndSample[T](asq: seq[T]): T"><wbr />rnd<wbr />Sample<span class="attachedType" style="visibility:hidden"></span></a></li>
 
   </ul>
 </li>
@@ -1485,7 +1493,7 @@ Status      : stable
 
 License     : MIT opensource
 
-Latest      : 2018-04-05
+Latest      : 2018-04-14
 
 Compiler    : Nim &gt;= 0.18.x dev branch
 
@@ -1566,31 +1574,8 @@ issues n newLines , default = 1
 
 
 </dd>
-<dt id="getTerminalWidth"><a name="getTerminalWidth,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">getTerminalWidth</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
+<dt id="isNumeric"><a name="isNumeric,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">isNumeric</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
 <dd>
-<p>getTerminalWidth</p>
-<p>get linux terminal width in columns a terminalwidth function is now incorporated in Nim dev after 2016-09-02 which maybe is slightly slower than the one presented here </p>
-
-
-</dd>
-<dt id="getTerminalHeight"><a name="getTerminalHeight,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">getTerminalHeight</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
-<dd>
-<p>getTerminalHeight</p>
-<p>get linux terminal height in rows </p>
-
-
-</dd>
-<dt id="cxpad"><a name="cxpad,string,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">cxpad</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">padlen</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
-<dd>
-<p>cxpad</p>
-<p>pads a string on the right side with spaces to specified width </p>
-
-
-</dd>
-<dt id="cxlpad"><a name="cxlpad,string,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">cxlpad</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">padlen</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
-<dd>
-<p>cxlpad</p>
-<p>pads a string on the left side with spaces to specified width </p>
 
 
 </dd>
@@ -1599,11 +1584,6 @@ issues n newLines , default = 1
 <p>waiton</p>
 <p>stops program to wait for one or more keypresses. default = 1 </p>
 
-
-</dd>
-<dt id="rndSample"><a name="rndSample,seq[T]"></a><pre><span class="Keyword">proc</span> <span class="Identifier">rndSample</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">asq</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">T</span></pre></dt>
-<dd>
-rndSample returns one rand sample from a sequence
 
 </dd>
 <dt id="rndRGB"><a name="rndRGB,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">rndRGB</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">auto</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">ValueError</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
@@ -2024,6 +2004,45 @@ doFlag<pre class="listing"><span class="Keyword">import</span> <span class="Iden
 </dd>
 
 </dl></div>
+<div class="section" id="13">
+<h1><a class="toc-backref" href="#13">Funcs</a></h1>
+<dl class="item">
+<dt id="getTerminalWidth"><a name="getTerminalWidth,"></a><pre><span class="Keyword">func</span> <span class="Identifier">getTerminalWidth</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
+<dd>
+<p>getTerminalWidth</p>
+<p>get linux terminal width in columns a terminalwidth function is now incorporated in Nim dev after 2016-09-02 which maybe is slightly slower than the one presented here </p>
+
+
+</dd>
+<dt id="getTerminalHeight"><a name="getTerminalHeight,"></a><pre><span class="Keyword">func</span> <span class="Identifier">getTerminalHeight</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
+<dd>
+<p>getTerminalHeight</p>
+<p>get linux terminal height in rows </p>
+
+
+</dd>
+<dt id="cxpad"><a name="cxpad,string,int,string"></a><pre><span class="Keyword">func</span> <span class="Identifier">cxpad</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">padlen</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">;</span> <span class="Identifier">paddy</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">spaces</span><span class="Other">(</span><span class="DecNumber">1</span><span class="Other">)</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
+<dd>
+<p>cxpad</p>
+<p>pads a string on the right side with spaces to specified width </p>
+
+
+</dd>
+<dt id="cxlpad"><a name="cxlpad,string,int,string"></a><pre><span class="Keyword">func</span> <span class="Identifier">cxlpad</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">padlen</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">;</span> <span class="Identifier">paddy</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">spaces</span><span class="Other">(</span><span class="DecNumber">1</span><span class="Other">)</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
+    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
+<dd>
+<p>cxlpad</p>
+<p>pads a string on the left side with spaces to specified width </p>
+
+
+</dd>
+<dt id="rndSample"><a name="rndSample,seq[T]"></a><pre><span class="Keyword">func</span> <span class="Identifier">rndSample</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">asq</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">T</span></pre></dt>
+<dd>
+rndSample returns one rand sample from a sequence
+
+</dd>
+
+</dl></div>
 <div class="section" id="16">
 <h1><a class="toc-backref" href="#16">Converters</a></h1>
 <dl class="item">
@@ -2280,7 +2299,7 @@ returns a colorpalette which can be used to iterate over</pre>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-04-05 15:16:34 UTC</small>
+        <small>Made with Nim. Generated: 2018-04-14 14:32:12 UTC</small>
       </div>
     </div>
   </div>
