--- a/cxprint.html
+++ b/cxprint.html
@@ -1378,13 +1378,7 @@ function main() {
   <li><a class="reference" href="#printLnInfoMsg,string,string,string,string,int"
     title="printLnInfoMsg(info, atext: string = &quot;&quot;; colLeft: string = lightslategray;
                colRight: string = pastelWhite; xpos: int = 1): string"><wbr />print<wbr />Ln<wbr />Info<wbr />Msg<span class="attachedType" style="visibility:hidden"></span></a></li>
-
-  </ul>
-</li>
-<li>
-  <a class="reference reference-toplevel" href="#13" id="63">Funcs</a>
-  <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#dprint,T"
+  <li><a class="reference" href="#dprint,T"
     title="dprint[T](s: T)"><wbr />dprint<span class="attachedType" style="visibility:hidden"></span></a></li>
 
   </ul>
@@ -2115,12 +2109,7 @@ forward declaration
 
 
 </dd>
-
-</dl></div>
-<div class="section" id="13">
-<h1><a class="toc-backref" href="#13">Funcs</a></h1>
-<dl class="item">
-<dt id="dprint"><a name="dprint,T"></a><pre><span class="Keyword">func</span> <span class="Identifier">dprint</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">T</span><span class="Other">)</span></pre></dt>
+<dt id="dprint"><a name="dprint,T"></a><pre><span class="Keyword">proc</span> <span class="Identifier">dprint</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">T</span><span class="Other">)</span></pre></dt>
 <dd>
 <p>dprint</p>
 <p>debug print shows contents of s in repr mode</p>
@@ -2170,7 +2159,7 @@ forward declaration
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-04-14 14:32:19 UTC</small>
+        <small>Made with Nim. Generated: 2018-04-14 15:33:29 UTC</small>
       </div>
     </div>
   </div>
